Readme: Refer to upstream install instructions and overhaul some parts
- Removes the Installation parts and instead delegates to the upstream
  instructions.

- Removes the `java-lsp.sh` script and just pass the options directly to
  `config.cmd`. Users could still create a script if they want to.

- Introcues a `local config` in the `Usage` section early on so that
  later parts which refer to `config` are less confusing.

- Explains the differences between nvim-lspconfig and nvim-jdtls a bit
  more